package adapter;

/**
 * @author zhenlei
 */
public interface AdventageMediaPlayer {
    /**
     * 播放Vlc
     */
    public void playVlc();

    /**
     * 播放Mp4
     */
    public void playMp4();
}
