package adapter;

/**
 * @author zhenlei
 */
public interface MediaPlayer {
    /**
     * 播放
     *
     * @param mediaType
     */
    public void player(String mediaType);
}
