package adapter;

/**
 * @author zhenlei
 */
public class VlcPlayer implements AdventageMediaPlayer {
    @Override
    public void playVlc() {
        System.out.println("play vlc");
    }

    @Override
    public void playMp4() {

    }
}
